--- a/client/src/pages/Home.css
+++ b/client/src/pages/Home.css
@@ -11,6 +11,21 @@
   justify-content: center;
   position: relative;
   color: white;
+  text-align:center;
+  padding:0 20px;
+}
+
+.hero::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background: rgba(11, 31, 58, 0.75);
+}
+
+.hero-content {
+  position: relative;
+  max-width: 900px;
+  margin: auto;
 }
 
 .hero-overlay {
@@ -21,7 +36,8 @@
 }
 
 .hero h1 {
-  font-size: 3.2rem;
+  font-size: 3rem;
+  color:white;
   font-weight: 600;
   line-height: 1.3;
 }
@@ -31,23 +47,31 @@
 }
 
 .hero p {
-  margin-top: 25px;
+  margin-top: 2px;
   font-size: 1.1rem;
   color: #E2E8F0;
 }
 
 .hero-buttons {
-  margin-top: 35px;
+  display: flex;
+  gap: 20px;
+  margin-top: 30px;
+  justify-content:center;
+}
+
+.btn-primary,
+.btn-outline {
+  padding: 14px 28px;
+  border-radius: 8px;
+  font-size: 16px;
+  text-decoration: none;
+  transition: 0.3s ease;
+  white-space: nowrap;
 }
 
 .btn-primary {
-  background: #2563EB;
-  padding: 14px 30px;
-  border-radius: 8px;
-  text-decoration: none;
+  background: #2563eb;
   color: white;
-  margin-right: 15px;
-  transition: 0.3s ease;
 }
 
 .btn-primary:hover {
@@ -96,4 +120,15 @@
     gap: 40px;
   }
 
+   .hero-buttons {
+    flex-direction: column;
+    align-items: center;
+    gap: 15px;
+  }
+
+  .btn-primary,
+  .btn-outline {
+    width: 80%;
+    text-align: center;
+  }
 }
